<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <EditTextPreference
         android:key="user_id"
         android:title="@string/pref_id_label"
         android:summary="@string/hint_id" />
     <EditTextPreference
         android:key="user_passwd"
         android:title="@string/pref_passwd_label"
         android:summary="@string/hint_passwd" />
     <EditTextPreference
         android:key="alert_days"
         android:title="@string/alert_days_label"
         android:summary="@string/alert_days_summary"
         android:defaultValue="2"
         android:digits="0123456789" />
     <!--  reference: http://stackoverflow.com/questions/13425338/how-to-set-only-numeric-value-for-edittextpreference-in-android#13425382 -->
</PreferenceScreen>
